--- a/biblio.bib
+++ b/biblio.bib
@@ -7,40 +7,50 @@
   pages = {94-97}
 }
 
-@CONFERENCE{biba1,
-  author = {Parkhimovich O., Mouromtsev D., Kovrigina L., Kozlov F.},
-  title = {Linking E-Learning Ontology Concepts with NLP Algorithms},
-  booktitle = {Proceedings of the 16th Conference of Open Innovations Association FRUCT},
-  year = {2014}
+@inproceedings{mouromtsev2014linking,
+  title={Linking E-Learning Ontology Concepts with NLP Algorithms},
+  author={Mouromtsev, Dmitry and Kozlov, Fedor and Kovriguina, Liubov and Parkhimovich, Olga},
+  booktitle={Open Innovations Association (FRUCT16), 2014 16th Conference of},
+  pages={60--65},
+  year={2014},
+  organization={IEEE}
 }
 
-@CONFERENCE{biba2,
-  author = {Kozlov F.},
-  title = {A Tool to Convert Linked Data of E-Learning System to the SCORM Standard},
-  booktitle = {Knowledge Engineering and the Semantic Web},
-  year = {2014}
+@incollection{kozlov2014tool,
+  title={A Tool to Convert Linked Data of E-Learning System to the SCORM Standard},
+  author={Kozlov, Fedor},
+  booktitle={Knowledge Engineering and the Semantic Web},
+  pages={229--236},
+  year={2014},
+  publisher={Springer}
 }
 
-@CONFERENCE{biba3,
-  author = {Kovriguina L., Mouromtsev D., Kozlov F., Parkhimovich O.},
-  title = {A Combined Method for E-Learning Ontology Population based on NLP and User Activity Analysis},
-  booktitle = {CEUR Workshop Proceedings},
-  year = {2014}
+@inproceedings{mouromtsev2014combined,
+  title={A combined method for e-learning ontology population based on nlp and user activity analysis},
+  author={Mouromtsev, Dmitry and Kozlov, Fedor and Kovriguina, Liubov and Parkhimovich, Olga},
+  booktitle={CEUR Workshop Proceedings: LILE 2014 Workshop Proceedings: Linked Learning Meets Linked Up: Learning and Education with the Web of Data},
+  volume={1254},
+  number={5},
+  year={2014}
 }
 
-@CONFERENCE{biba4,
-  author = {Mouromtsev D.I., Kozlov F., Parkhimovich O., Zelenina M.S.},
-  title = {Development of an Ontology-Based E-Learning System},
-  booktitle = {Knowledge Engineering and the Semantic Web},
-  year = {2013}
+@incollection{mouromtsev2013development,
+  title={Development of an ontology-based e-learning system},
+  author={Mouromtsev, Dmitry and Kozlov, Fedor and Parkhimovich, Olga and Zelenina, Maria},
+  booktitle={Knowledge Engineering and the Semantic Web},
+  pages={273--280},
+  year={2013},
+  publisher={Springer}
 }
 
 
-@CONFERENCE{biba5,
-  author = {Kolchin M., Kozlov F.},
-  title = {A template-based information extraction from web sites with unstable markup},
-  booktitle = {Semantic Web Evaluation Challenge},
-  year = {2014}
+@incollection{kolchin2014template,
+  title={A template-based information extraction from web sites with unstable markup},
+  author={Kolchin, Maxim and Kozlov, Fedor},
+  booktitle={Semantic Web Evaluation Challenge},
+  pages={89--94},
+  year={2014},
+  publisher={Springer}
 }
 
 @ARTICLE{biba6,
@@ -53,9 +63,11 @@
 }
 
 
-@CONFERENCE{biba7,
-  author = {Mouromtsev D. Kozlov F. Kovriguina L. Parkhimovich O.},
-  title = {ECOLE: Student Knowledge Assessment in the Education Process},
-  booktitle = {WWW 2015 Proceedings},
-  year = {2015 (в печати)}
+@inproceedings{mouromtsev2015ecole,
+  title={ECOLE: Student Knowledge Assessment in the Education Process},
+  author={Mouromtsev, Dmitry and Kozlov, Fedor and Kovriguina, Liubov and Parkhimovich, Olga},
+  booktitle={Proceedings of the 24th International Conference on World Wide Web Companion},
+  pages={695--700},
+  year={2015},
+  organization={International World Wide Web Conferences Steering Committee}
 }
