--- a/data.tex
+++ b/data.tex
@@ -22,41 +22,41 @@
 {\todo{кандидат технических наук, доцент}}
 
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
-{\todo{Фамилия Имя Отчество}}
+{\todo{........}}
 \newcommand{\opponentOneRegalia}       % Оппонент 1, регалии
-{\todo{доктор физико-математических наук, профессор}}
+{\todo{........}}
 \newcommand{\opponentOneJobPlace}      % Оппонент 1, место работы
-{\todo{Не очень длинное название для места работы}}
+{\todo{........}}
 \newcommand{\opponentOneJobPost}       % Оппонент 1, должность
-{\todo{старший научный сотрудник}}
+{\todo{........}}
 
 \newcommand{\opponentTwoFio}           % Оппонент 2, ФИО
-{\todo{Фамилия Имя Отчество}}
+{\todo{........}}
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
-{\todo{кандидат физико-математических наук}}
+{\todo{........}}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
-{\todo{Основное место работы c длинным длинным длинным длинным названием}}
+{\todo{........}}
 \newcommand{\opponentTwoJobPost}       % Оппонент 2, должность
-{\todo{старший научный сотрудник}}
+{\todo{........}}
 
 \newcommand{\leadingOrganizationLines} % Ведущая организация, дополнительные строки
 {\\~\\~\\~}
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки
-{\todo{Федеральное государственное бюджетное образовательное учреждение высшего профессионального образования с длинным длинным длинным длинным названием}}
+{\todo{Ярославский государственный университет им. П. Г. Демидова}}
 
 \newcommand{\defenseDate}              % Защита, дата
 {\todo{DD mmmmmmmm YYYY~г.~в~XX часов}}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
-{\todo{NN}}
+{\todo{№6}}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
-{\todo{Название учреждения}}
+{\todo{Санкт-Петербургского национального исследовательского университета информационных технологий, механики и оптики}}
 \newcommand{\defenseCouncilAddress}    % Защита, адрес учреждение диссертационного совета
-{\todo{Адрес}}
+{\todo{Кронверкский пр-кт, 49, Санкт-Петербург, 197101}}
 
 \newcommand{\defenseSecretaryFio}      % Секретарь диссертационного совета, ФИО
-{\todo{Фамилия Имя Отчество}}
+{\todo{Холодова Светлана Евгеньевна}}
 \newcommand{\defenseSecretaryRegalia}  % Секретарь диссертационного совета, регалии
-{\todo{д.ф.-м.н.}}
+{\todo{к.т.н.}}
 
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
 {\todo{Название библиотеки}}
